[gd_scene load_steps=4 format=3 uid="uid://b68f8g7qwyut7"]

[ext_resource type="Script" uid="uid://ddbbj8g6na201" path="res://scripts/systems/menus/options.gd" id="1_f2nhr"]
[ext_resource type="Theme" uid="uid://cdp1vqedgum7d" path="res://themes/menu.tres" id="2_m6lnw"]
[ext_resource type="StyleBox" uid="uid://cv88a6udmx6gh" path="res://themes/new_style_box_flat.tres" id="3_202s5"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_m6lnw")
script = ExtResource("1_f2nhr")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 126.0
theme = ExtResource("2_m6lnw")
theme_override_font_sizes/font_size = 150
text = "Options"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_top = 250.0
offset_right = 1920.0
offset_bottom = 317.0
current_tab = 0

[node name="Video" type="TabBar" parent="TabContainer"]
layout_mode = 2
theme = ExtResource("2_m6lnw")
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Video"]
layout_mode = 0
offset_right = 337.0
offset_bottom = 121.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Video/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="OptionButton" type="OptionButton" parent="TabContainer/Video/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme = ExtResource("2_m6lnw")

[node name="ShaderToggle" type="CheckButton" parent="TabContainer/Video/MarginContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Shaders "

[node name="Debug" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Debug"]
layout_mode = 0
offset_right = 218.0
offset_bottom = 67.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Debug/MarginContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="TabContainer/Debug/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "---- WAVES ----"

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Debug/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Debug/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Wave: "

[node name="WaveInput" type="SpinBox" parent="TabContainer/Debug/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 99999999999999.0
rounded = true
update_on_text_changed = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_top = 934.0
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("2_m6lnw")
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = ExtResource("3_202s5")
text = "BACK"

[connection signal="item_selected" from="TabContainer/Video/MarginContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="TabContainer/Video/MarginContainer/VBoxContainer/ShaderToggle" to="." method="_on_shader_toggle_toggled"]
[connection signal="value_changed" from="TabContainer/Debug/MarginContainer/VBoxContainer/HBoxContainer/WaveInput" to="." method="_on_wave_input_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
